[package]
name = "rust_version"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epoll = "4.3.1"
libc = "0.2.140"
thiserror = "1.0.40"
byteorder = "1.4"
chrono = "0.4"
parking_lot = "0.12"
threadpool = "1.8"

[dev-dependencies]
criterion = "0.3"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "benchmark_tcp_server.rs"
harness = false