[package]
name = "rust_version"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epoll = "4.3.1"
libc = "0.2.140"
thiserror = "1.0.40"
byteorder = "1.4"
chrono = "0.4"
parking_lot = "0.12"
threadpool = "1.8"
mysql = "20.0"
regex = "1.5"
tokio = { version = "1.32", features = [
    "rt",
    "rt-multi-thread",
    "macros", 
    "net",
    "io-util",
    "sync",
    "time"
]}

[dev-dependencies]
criterion = "0.3"