[package]
name = "rust_version"
version = "0.1.0"
edition = "2021"

[dependencies]
epoll = "4.3.1"
libc = "0.2.140"
thiserror = "1.0.40"
byteorder = "1.4"
chrono = "0.4"
parking_lot = "0.12"
threadpool = "1.8"
mysql = "20.0"
regex = "1.5"
tokio = { version = "1.32", features = [
    "rt",
    "rt-multi-thread",
    "macros", 
    "net",
    "io-util",
    "sync",
    "time"
]}

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
codegen-units = 1
panic = 'unwind'

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "tcp_server_throughput"
harness = false